feat(Driver): 大改数据库结构，使用id模式
大改数据库结构，使用id模式，优化目录下存在大量文件时性能
补全DriverInterface文档